# fhe-video-similarity

./: .gitignore  .gitmodules  README.md  pubspec.yaml
lib/: logging.dart  main.dart  seal.dart  (+1 more)
results/: Accuracy_vs_Performance.ipynb  README.md  Score_Derivation.ipynb  accuracy.ipynb  experiments.ipynb  log.py  pyproject.toml
results/1_Static_Color/1_Black_White/1_10s/1_100_percent/: 3xl_sso_all.csv  3xl_sso_firstLast.csv  3xl_sso_randomHalf.csv  linux_sso_all.csv  linux_sso_firstLast.csv  linux_sso_randomHalf.csv  s9_sso_all.csv  s9_sso_firstLast.csv  s9_sso_randomHalf.csv
results/1_baseline/: 1080p-0_degree.csv  1080p-180_degree.csv  1080p-90_degree.csv  720p-0_degree.csv  720p-180_degree.csv  720p-90_degree.csv  summary.csv
results/1_baseline/raw_data/: 1080p-180_degree-original_data.csv  1080p-90_degree-original_data.csv  1080p-original_data.csv  720p-180_degree-original_data.csv  720p-90_degree-original_data.csv  720p-original_data.csv
results/2_fov/csv_videos/: bunny.csv  landscape_180_degree_iPhone13.csv  landscape_90_degree_PXL3.csv  portrait_270_degree_S9.csv
results/2_fov/train_similarity_scores/: 180_landscape_vs_270_portrait.csv  180_landscape_vs_90_landscape.csv  270_portrait_vs_180_landscape.csv  270_portrait_vs_90_landscape.csv  90_landscape_vs_180_landscape.csv  90_landscape_vs_270_portrait.csv  pairwise_landscape_180_degree_iPhone13.csv  pairwise_landscape_90_degree_PXL3.csv  pairwise_portrait_270_degree_S9.csv
results/utils/: __init__.py  acc_vs_perf_tables.py  accuracy.py  baseline_tables.py  csv.py  log.py  performance.py  tables.py
(+93 files in other folders)
