[tool.poetry]
name = "results"
version = "0.0.1"
description = "GhostPeerShare Results"
authors = ["Jeffrey Murray <jeffmur@uw.edu>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.2.2"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
ipykernel = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
